test/Fail/Issue2420.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _0 (F1 = F1) =< Setâ‚ (blocked on _0)

Issue2420.agda:10.10-14: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue2420.agda:10.10-14

Issue2420.agda:10.10-14: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2420.agda:10.10-14
